--- a/projects.html
+++ b/projects.html
@@ -29,6 +29,8 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            width: fit-content;
+            margin: 0 auto;
             transform-origin: center center;
             transition: transform 0.3s ease-out;
         }
