--- a/projects.html
+++ b/projects.html
@@ -343,15 +343,19 @@
                 font-size: 48px;
             }
 
+            .title-block {
+                transform: scale(0.65);
+            }
+
             .projects-grid {
-                grid-template-columns: 1fr;
-                gap: 32px 24px;
+                grid-template-columns: repeat(2, 1fr);
+                gap: 24px 16px;
                 justify-items: center;
             }
 
             .project {
-                max-width: 280px;
-                padding: 16px;
+                max-width: 200px;
+                padding: 12px;
             }
         }
     </style>
