--- a/about.html
+++ b/about.html
@@ -420,12 +420,20 @@
             background: #f0f0f0;
             border: 1px solid #e2e2e2;
             border-radius: 16px;
+            overflow: hidden;
             display: flex;
             align-items: center;
             justify-content: center;
             color: var(--muted);
             font-size: 12px;
             transform: rotate(4deg);
+        }
+
+        .photo img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            display: block;
         }
 
         @media (max-width: 900px) {
@@ -575,7 +583,9 @@
                 </div>
             </div>
             <div class="intro-photo">
-                <div class="photo">IMAGE PLACEHOLDER</div>
+                <div class="photo">
+                    <img src="about-headshot.jpg" alt="Matthew Zhang">
+                </div>
             </div>
         </section>
 
